fixed chatmenu missalignment

--- a/css/main.css
+++ b/css/main.css
@@ -164,10 +164,6 @@ img{
     text-align: center;
 }
 
-.content
-{
-    margin-left: 1rem;
-}
 
 h1
 {
